# mycelial

./: .dockerignore  .gitignore  API.md  Cargo.toml  Makefile  README.md
client/: .gitignore  Cargo.toml  Dockerfile  Makefile  client_state.sqlite  config.example.toml  flyio.toml  test.sqlite
client/src/: http_client.rs  macros.rs  main.rs  runtime.rs  storage.rs
common/: Cargo.toml
common/src/: lib.rs
config/: Cargo.toml
config/config_derive/: Cargo.toml
config/config_derive/src/: lib.rs
config/src/: de.rs  lib.rs  ser.rs
config/src/raw_config/: de.rs  mod.rs  ser.rs
config/tests/: simple_config.rs  test_config.rs  test_ser_de.rs
config/tests/compilation_fails_checks/: bad_section_attributes.rs  bad_section_attributes.stderr  enum.rs  enum.stderr  union.rs  union.stderr  union_struct.rs  union_struct.stderr
config_registry/: Cargo.toml
config_registry/src/: config_only.rs  config_section.rs  lib.rs
control_plane/: .gitignore  Cargo.toml  Makefile
control_plane/derive_trait/: Cargo.toml
control_plane/derive_trait/src/: lib.rs
control_plane/impl_as_trait/: Cargo.toml
control_plane/impl_as_trait/src/: lib.rs
control_plane/src/: db_pool.rs  lib.rs  main.rs  model.rs  tls_server.rs
control_plane/src/app/: daemon_tracker.rs  db.rs  graph_manager.rs  mod.rs  model.rs  tables.rs
control_plane/src/app/migration/: m0001.rs  m0002.rs  mod.rs
control_plane/src/http/: assets.rs  mod.rs  workspace.rs  workspaces.rs
control_plane/src/http/api/: daemon.rs  mod.rs  workspace.rs  workspaces.rs
control_plane/src/http/daemon_api/: mod.rs
myceliald/: .gitignore  Cargo.toml  Dockerfile  Makefile  client.db  config.example.toml  config.flyio.toml  flyio.toml
myceliald/migrations/: 20230806170305_state.sql  20230926135327_state_per_pipe.sql  20240214194737_client_creds.sql  20240304115513_connection.sql  20240304135015_daemon.sql  20240304155015_config.sql  20240305120511_pipe.sql  20240802133952_v0.9.0.sql  20240918134508_state_update.sql
myceliald/src/: config_watcher.rs  control_plane_client.rs  daemon_storage.rs  http_client.rs  lib.rs  main.rs  runtime.rs  runtime_error.rs  runtime_storage.rs  scheduler.rs  section_channel.rs  sqlite_storage.rs  storage.rs
myceliald/src/constructors/: csv_transform.rs  dir.rs  excel_connector.rs  exec.rs  file.rs  hello_world.rs  inspect.rs  kafka_connector.rs  mod.rs  mycelial_server.rs  mysql_connector.rs  origin_transform.rs  postgres_connector.rs  redshift_loader.rs  s3.rs  snowflake.rs  sqlite_connector.rs  sqlite_typecast.rs  stuck_in_the_middle.rs  tagging_transformer.rs  typecast_transformer.rs
pipe/arrow_msg/: Cargo.toml
pipe/arrow_msg/src/: lib.rs
pipe/arrow_msg/tests/: time_conv.rs  timestamp_conv.rs  union_array_iter.rs
pipe/runtime/: Cargo.toml
pipe/runtime/src/: channel.rs  command_channel.rs  config.rs  lib.rs  message.rs  pipe.rs  registry.rs  scheduler.rs  state.rs  storage.rs  types.rs
pipe/runtime/src/command_channel/: mod.rs  tokio.rs
pipe/runtime/src/sections/: mod.rs
pipe/runtime/tests/: command_channel.rs  scheduler.rs
pipe/section/: Cargo.toml
pipe/section/section_impls/bacalhau/: Cargo.toml
pipe/section/section_impls/csv_transform/: Cargo.toml
pipe/section/section_impls/dir/: Cargo.toml
pipe/section/section_impls/exec/: Cargo.toml
pipe/section/src/: command_channel.rs  lib.rs  message.rs  pretty_print.rs  section.rs  state.rs
pki/: Cargo.toml
pki/src/: lib.rs
sections/csv_transform/: Cargo.toml
sections/csv_transform/src/: destination.rs  lib.rs
sections/dir/: Cargo.toml
sections/dir/examples/: list_dir_bin.rs
sections/dir/src/: source.rs
sections/exec/: Cargo.toml
sections/exec/src/: bin.rs  lib.rs
sections/kafka_connector/: Cargo.toml
sections/kafka_connector/src/: lib.rs
sections/postgres_connector/: Cargo.toml
sections/postgres_connector/examples/: simple_query.rs  stateful_query.rs  stateful_query_between.rs
sections/postgres_connector/src/: destination.rs  lib.rs  message.rs  source.rs
sections/redshift_loader/: Cargo.toml
sections/redshift_loader/examples/: s3_csv_load.rs
sections/redshift_loader/src/: destination.rs  lib.rs
sections/run/: Cargo.toml
sections/run/examples/: run_example.rs
sections/run/src/: lib.rs
sections/s3/: Cargo.toml
sections/s3/examples/: list_objects.rs  upload_object.rs
sections/s3/src/: destination.rs  lib.rs  source.rs  static_credentials_provider.rs
sections/snowflake/: Cargo.toml
sections/snowflake/src/: source.rs
server/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  flyio.toml
server/migrations/: 20230705180624_initial_schema.sql  20230707153921_add_configs_table.sql  20230711124821_add_column_to_configs_table.sql  20230802183517_create_records_table.sql  20230808101819_mycelial_net_origin.sql  20230816214831_modify_config_table.sql  20230818162734_create_pipes_table.sql  20230831122217_add_client_sources.sql  20230831122708_add_client_display_name.sql  20230906124416_add_client_destinations.sql  20231016165647_create_workspaces_table.sql  20231220221051_message_stream.sql  20240119145229_message_stream_type.sql  20240205152029_add_user_id_to_tables.sql  20240208143236_add_columns_to_clients.sql  20240209151120_create_user_daemon_token_table.sql  20240228164250_postgres_init.sql
server/misc/: set_pipe_configs.sh
server/src/: app.rs  daemon_auth.rs  daemon_basic_auth.rs  db.rs  db_pool.rs  error.rs  ingestion.rs  main.rs  model.rs  pipe.rs  workspace.rs
server/src/migration/: m0001.rs  mod.rs
ui/: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md  index.html
ui/.cargo/: config.toml
ui/assets/: .gitignore  AeonikFono.ttf.br  AeonikMono.ttf.br  favicon.svg.br  mycelial.css  mycelial.css.br  tailwind.css  tailwind.css.br
ui/src/: config_registry.rs  lib.rs  main.rs  model.rs
ui/src/components/: app.rs  card.rs  daemon.rs  daemon_tokens.rs  daemons.rs  graph.rs  icons.rs  index.rs  login.rs  logo.rs  mod.rs  navbar.rs  node_config.rs  node_state.rs  node_state_form.rs  routing.rs  workspace.rs  workspaces.rs
ui/tailwind/: tailwind.config.js
(+265 files in other folders)
