[workspace]
resolver = "2"
members = [
    "config",
    "config_registry",
    "control_plane",
    "graph",
    "myceliald",
    "pki",
    "ui",
    "section",
    "formats/arrow_msg",

    "sections/dir",
    "sections/excel_connector",
##  "sections/exec",
##  "sections/file",
    "sections/inspect",
##  "sections/kafka_connector",
##  "sections/mysql_connector",
##  "sections/origin_transform",
    "sections/postgres_connector",
    "sections/redshift_loader",
    "sections/s3",
##  "sections/snowflake",
##  "sections/sqlite_connector",
##  "sections/tagging_transformer",
##  "sections/typecast_transformer",
]

[workspace.package]
version = "0.9.0"
