[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
exp2 = { git="https://github.com/mycelial/pipexperiments", rev="89cf34757aad41d6d62d34532b0b96b1a1ee38ab" }
# exp2 = { path = "../../pipexperiments/exp2" }
anyhow = "1"
base64 = { version = "0.21" }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite"]}
log = "0.4"
pretty_env_logger = "0.5"
