[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
exp2 = { git="https://github.com/mycelial/pipexperiments", rev="90b90911afbfe21d842819bb4cb7659b5f2778e5" }
