[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
pipe = { version = "0.3", path = "../pipe/runtime/", package="runtime" }
section = { version = "0.3", path = "../pipe/section/"}
sqlx = "0.7"
