[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config_derive = {path = "config_derive"}

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
trybuild = { version = "1" }