[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config_derive = {path = "config_derive"}
dyn-clone = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
trybuild = { version = "1" }
serde_json = "1"
quickcheck = "1"