[package]
name = "config_registry"
version = "0.1.0"
edition = "2021"

[features]
default = []
section = [
    "csv_transform/section",
    "dir/section",
    "excel_connector/section",
    "inspect/section",
]

[dependencies]
config = { path = "../config" }
section = { path = "../pipe/section" }
serde = "1"

csv_transform = { path = "../pipe/section/section_impls/csv_transform", default-features=false }
dir = { path = "../pipe/section/section_impls/dir", default-features=false }
excel_connector = { path = "../pipe/section/section_impls/excel_connector", default-features=false }
inspect  = { path = "../pipe/section/section_impls/inspect", default-features=false }
