[package]
name = "config_registry"
version = "0.1.0"
edition = "2021"

[features]
default = []
section = [
    "csv_transform/section",
    "dir/section",
    "excel_connector/section",
    "inspect/section",
    "postgres_connector/section",
    "redshift_loader/section",
    "s3/section",
]

[dependencies]
config = { path = "../config" }
section = { path = "../section" }
serde = "1"

csv_transform = { path = "../sections/csv_transform", default-features=false }
dir = { path = "../sections/dir", default-features=false }
excel_connector = { path = "../sections/excel_connector", default-features=false }
inspect  = { path = "../sections/inspect", default-features=false }
postgres_connector = { path = "../sections/postgres_connector", default-features=false }
redshift_loader = { path = "../sections/redshift_loader", default-features=false }
s3 = { path = "../sections/s3", default-features=false }