[package]
name = "control_plane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-stream = "0.3.5"
axum = "0.7.5"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sea-query = "0.30.7"
sea-query-binder = { version = "0.5.0", features = [
    "sqlx-any", "sqlx-postgres", "sqlx-sqlite", "sqlx-mysql", "runtime-tokio-rustls",
    "with-chrono", "with-json", "with-uuid", "with-time",
]}
rust-embed = "8.4.0"
sqlx = "0.7.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
futures = "0.3.30"
