[package]
name = "control_plane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "control_plane"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = "0.7"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sea-query = "0.30.7"
sea-query-binder = { version = "0.5.0", features = [
    "sqlx-any", "sqlx-postgres", "sqlx-sqlite", "sqlx-mysql", "runtime-tokio-rustls",
    "with-chrono", "with-json", "with-uuid", "with-time",
]}
rust-embed = "8.4"
sqlx = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
futures = "0.3.30"
mime_guess = "2.0.4"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5.0"
derive_trait = { path = "./derive_trait" }
config = { path = "../config/" }
