[package]
name = "control_plane"
version = { workspace=true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "control_plane"
path = "src/main.rs"

[dependencies]
derive_trait = { path = "./derive_trait" }
config = { path = "../config" }
config_registry = { path = "../config_registry" }
protocol = { path = "../protocol" }
pki = { path = "../pki" }
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.7", features=["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sea-query = "0.30.7"
sea-query-binder = { version = "0.5.0", features = [
    "sqlx-any", "sqlx-postgres", "sqlx-sqlite", "sqlx-mysql", "runtime-tokio-rustls",
    "with-chrono", "with-json", "with-uuid", "with-time",
]}
rust-embed = "8.4"
sqlx = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
futures = "0.3.30"
mime_guess = "2.0.4"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5.0"
tower-service = "0.3.2"
tokio-rustls = { version = "0.26.0", default-features = false, features=["ring", "tls12"] }
hyper = "1.4.1"
hyper-util = "0.1.6"
rustls = { version = "0.23.12", default-features=false, features=["ring"]}
rand = "0.8.5"
sha2 = "0.10.8"
