[package]
name = "myceliald"
version = { workspace=true }
edition = "2021"

# See more keys and their definitions at https:/doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipe = { path = "../pipe/runtime/", package="runtime" }
section = { path = "../pipe/section/" }
pki = { path = "../pki" }

tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["gzip", "json", "rustls-tls"] }
anyhow = "1"
base64 = { version = "0.21" }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "any", "json", "runtime-tokio-rustls"]}
log = "0.4"
toml = "0.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
notify = { version = "6.1.1", features = ["macos_kqueue"] }
notify-debouncer-full = "0.3.1"
sha2 = "0.10.8"

## sections
hello_world = { path = "../pipe/section/section_impls/hello_world/" }
sqlite_connector = { path = "../pipe/section/section_impls/sqlite_connector/" }
excel_connector = { path = "../pipe/section/section_impls/excel_connector/" }
postgres_connector = { path = "../pipe/section/section_impls/postgres_connector/" }
kafka_connector = { path = "../pipe/section/section_impls/kafka_connector/" }
mycelial_server = { path = "../pipe/section/section_impls/mycelial_server/" }
snowflake = { path = "../pipe/section/section_impls/snowflake/" }
tagging_transformer = { path = "../pipe/section/section_impls/tagging_transformer/" }
typecast_transformer = { path = "../pipe/section/section_impls/typecast_transformer" }
mysql_connector = { path = "../pipe/section/section_impls/mysql_connector/" }
file = { path = "../pipe/section/section_impls/file/" }
dir = { path = "../pipe/section/section_impls/dir/" }
exec = { path = "../pipe/section/section_impls/exec/" }
csv_transform = { path = "../pipe/section/section_impls/csv_transform/" }
origin_transform = {path = "../pipe/section/section_impls/origin_transform/" }
s3 = { path = "../pipe/section/section_impls/s3" }
redshift_loader = { path = "../pipe/section/section_impls/redshift_loader" }
inspect = { path = "../pipe/section/section_impls/inspect" }
#sqlite_physical_replication = { path = "../pipe/section/section_impls/sqlite_physical_replication/" }
