[package]
name = "myceliald"
version = { workspace=true }
edition = "2021"

# See more keys and their definitions at https:/doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { path = "../pipe/runtime/", package="runtime" }
section = { path = "../pipe/section/" }
pki = { path = "../pki" }
config_registry = { path = "../config_registry/", features=["section"] }

tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["gzip", "json", "rustls-tls"] }
anyhow = "1"
base64 = { version = "0.21" }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "any", "json", "runtime-tokio-rustls"]}
log = "0.4"
toml = "0.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sha2 = "0.10.8"

tokio-tungstenite = { version = "0.23.1", features = ["__rustls-tls", "connect", "rustls", "tokio-rustls"] }
tungstenite = "0.23.0"
uuid = { version = "1.10.0", features = ["serde"] }
chrono = "0.4.38"
