[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["headers"] }
clap = { version = "4", features = ["derive", "env"]}
base64 = { version = "0.21" }
anyhow = "1"
arrow = { version = "42", features = ["prettyprint"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio-util = "0.7.8"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"]}
tower-http = { version = "0.4.1", features = ["fs"] }
log = "0.4"
pretty_env_logger = "0.5"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
