[package]
name = "server"
version = "0.2.0"
edition = "2021"

[features]
default = [] 
embed_assets = []
require_auth = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["headers"] }
jsonwebtoken = {version = "9.2", features =["use_pem"]}
clap = { version = "4", features = ["derive", "env"]}
reqwest = { version = "0.11", features = ["json"] }
base64 = { version = "0.21" }
anyhow = "1"
arrow = { version = "42", features = ["prettyprint"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio-util = "0.7.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "chrono", "postgres", "tls-rustls"]}
tower-http = { version = "0.4.1", features = ["fs"] }
common = { path = "../common" }
rust-embed = "8.0.0"
mime_guess = { version = "2" }
async-stream = "0.3.5"
bcrypt = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
