[package]
name = "server"
version = "0.2.0"
edition = "2021"

[features]
default = [] 
require_auth = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
jsonwebtoken = {version = "9.2", features =["use_pem"]}
clap = { version = "4", features = ["derive", "env"]}
base64 = { version = "0.21" }
anyhow = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio-util = "0.7.8"
sqlx = "0.7"
tower-http = { version = "0.4.1", features = ["fs"] }
common = { path = "../common" }
rust-embed = "8.0.0"
mime_guess = { version = "2" }
async-stream = "0.3.5"
bcrypt = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sea-query = "0.30.7"
sea-query-binder = { version = "0.5.0", features = [
    "sqlx-any", "sqlx-postgres", "sqlx-sqlite", "sqlx-mysql", "runtime-tokio-rustls",
    "with-chrono", "with-json", "with-uuid", "with-time",
]}
reqwest = { version = "0.11.26", features = ["json"] }
url = "2.5.0"
uuid = {version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics" ]}
