[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
futures = "0.3"
reqwest = { version = "0.12", default-features=false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tracing = "0.1"
web-sys = { version = "0.3", features = ["Window"] }
config = { path = "../config" }
config_registry = { path = "../config_registry" }
dioxus-logger = "0.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
url = "2.5.0"
uuid = { version = "1", features = ["v7", "serde", "js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-wasm = "0.2.1"

[dev-dependencies]
quickcheck = "1.0.3"
