[package]
name = "ui"
version = { workspace=true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
config = { path = "../config" }
config_registry = { path = "../config_registry" }
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-logger = "0.5"
futures = "0.3"
graph = {path = "../graph" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
reqwest = { version = "0.12", default-features=false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-wasm = "0.2.1"
url = "2.5.0"
uuid = { version = "1", features = ["v7", "serde", "js"] }
web-sys = { version = "0.3", features = ["Navigator", "Window", "Clipboard"] }

[dev-dependencies]
quickcheck = "1.0.3"
