[package]
name = "arrow_msg"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
section = { path = "../section/" }
arrow = { version = "50", features = ["prettyprint"] }
chrono = "0.4"

[dev-dependencies]
quickcheck = "1"
