[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tokio"]
tokio = []


[dependencies]
futures = "0.3"
arrow = "42"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
serde_json = "1"
toml = "0.7"
section = { path = "../section" }
log = "0.4"
rdkafka = "0.34.0"

## fixme
reqwest = { version = "0.11", features = ["json"] }
base64 = { version = "0.21" }
bytes = "1.5"

## sections
stub = { path = "../section/section_impls/stub/" }
sqlite_connector = { path = "../section/section_impls/sqlite_connector/" }
kafka = { path = "../section/section_impls/kafka/" }
bacalhau = { path = "../section/section_impls/bacalhau/" }
sqlite_physical_replication = { path = "../section/section_impls/sqlite_physical_replication/" }
async-watcher = "0.2.0"
