[package]
name = "runtime"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tokio"]
tokio = []


[dependencies]
tokio = { version = "1", features=["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
serde_json = "1"
toml = "0.7"
section = { path = "../section" }
tracing = "0.1"
stub = { path = "../section/section_impls/stub/" }


[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }