[package]
name = "section"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
futures = "0.3"
async-trait = "0.1"
uuid = "1.6"
rust_decimal = "1.33"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
