[package]
name = "dir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["section"]
section = [
    "dep:tokio", "dep:tokio-stream", "dep:regex", "dep:tracing", "dep:section",
]

[dependencies]
section = { path = "../../section", optional=true }
tokio = { version = "1", features = ["full"], optional=true }
tokio-stream = { version = "0.1", features = ["fs"], optional=true }
regex = { version = "1", optional=true }
tracing = {version = "0.1", optional=true }
config = { path = "../../config" }

[dev-dependencies]
clap = { version = "4", features = ["derive"]}
stub = { path = "../stub" }
tokio-util = "0.7"
