[package]
name = "exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["section"]
section = [
    "dep:section", "dep:shlex", "dep:tokio", "dep:tracing",
]

[dependencies]
section = { path = "../../section/", optional=true }
shlex = {version = "1.3.0", optional=true }
tokio = { version = "1", features = ["full"], optional=true }
tracing = { version = "0.1", optional = true }
config = { path = "../../config" }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio-util = "0.7"
tokio-stream = "0.1"
tracing-subscriber = "0.3"