[package]
name = "kafka_connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
section = { path = "../../" }
futures = "0.3"
rdkafka = { version = "0.34.0", features = ["cmake-build"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3.8"
stub = { path = "../stub/" }
tokio-util = "0.7"
