[package]
name = "run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
section = { path = "../../" }
shlex = "1.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
stub = { path = "../stub" }
anyhow = "1"
tracing-subscriber = "0.3"
