[package]
name = "s3"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1" }
tokio = { version = "1", features = ["full"] }
section = { path = "../../" }
aws-credential-types = "1.2.0"
url = "2.5.1"
tracing = "0.1"
http-body = "1.0.0"
bytes = "1"

[dev-dependencies]
clap = { version = "4", features=["derive", "env"] }
stub = { path = "../stub" }
tokio-util = "0.7"
tokio-stream = "0.1"
tracing-subscriber = "0.3.18"
quickcheck = "1"
