[package]
name = "s3"
version = "0.1.0"
edition = "2021"

[features]
default = ["section"]
section = [
    "dep:aws-config", "dep:aws-sdk-s3", "dep:tokio",
    "dep:section", "dep:aws-credential-types",
    "dep:url", "dep:http-body", "dep:bytes",
    "dep:tracing",
]

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"], optional=true }
aws-sdk-s3 = { version = "1", optional=true }
tokio = { version = "1", features = ["full"], optional=true }
section = { path = "../../section", optional=true }
aws-credential-types = { version = "1.2.0", optional=true }
url = { version = "2.5.1", optional=true} 
tracing = { version = "0.1", optional = true }
http-body = { version = "1.0.0", optional = true }
bytes = { version = "1", optional = true }
config = { path = "../../config" }

[dev-dependencies]
clap = { version = "4", features=["derive", "env"] }
stub = { path = "../stub" }
tokio-util = "0.7"
tokio-stream = "0.1"
tracing-subscriber = "0.3.18"
quickcheck = "1"
