[package]
name = "snowflake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snowflake-api = "0.7"
section = { path = "../.." }
tokio = { version = "1", features = ["full"] }
arrow_msg = { path = "../../../arrow_msg" }
parquet = { version = "50", features = ["async"] }
tempfile = "3.8.1"
thiserror = "1.0.51"
