[package]
name = "excel_connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
section = { path = "../../" }
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
futures = "0.3"
tokio = { version = "1", features=["full"] }
tokio-stream = "0.1"
calamine = {version = "0.22.1", features=["dates"]}
chrono = "0.4.31"
glob = "0.3.1"

[dev-dependencies]
tempfile = "3.8"
stub = { path = "../stub/" }
section = { path = "../../", features=["dummy"] }
tokio-util = "0.7"
