[package]
name = "excel_connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["section"]
section = [
    "dep:notify", "dep:tokio", "dep:tokio-stream", "dep:calamine", "dep:chrono",
    "dep:glob", "dep:globset", "dep:section"
]

[dependencies]
section = { path = "../../", optional=true }
notify = { version = "6", default-features = false, features = ["macos_kqueue"], optional=true }
tokio = { version = "1", features=["full"], optional=true }
tokio-stream = { version = "0.1", optional=true }
calamine = {version = "0.22.1", features=["dates"], optional=true}
chrono = { version = "0.4", optional=true }
glob = { version = "0.3", optional=true }
globset = { version = "0.4", optional = true }
config = { path = "../../../../config" }

[dev-dependencies]
tempfile = "3.8"
stub = { path = "../stub/" }
tokio-util = "0.7"
