[package]
name = "exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
section = { path = "../../" }
shlex = "1.3.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio-util = "0.7"
tokio-stream = "0.1"
