[package]
name = "file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
section = { path = "../../" }
tempfile = "3.9.0"
tokio = { version = "1", features = ["full"] }
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
