[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
section = { path = "../../../section/" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"

[dev-dependencies]
stub = {path = "../../section_impls/stub/" }
