[package]
name = "kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
section = { path = "../../" }
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"
stub = { path = "../stub/" }
section = { path = "../../", features=["dummy"] }
tokio-util = "0.7"

[target.'cfg(target_os="windows")'.dependencies]
rdkafka = { version = "0.34.0", features = ["cmake-build"] }

[target.'cfg(not(target_os="windows"))'.dependencies]
rdkafka = { version = "0.34.0" }
