[package]
name = "mycelial_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow_msg = { path = "../../../arrow_msg" }
async-stream = "0.3.5"
base64 = "0.21.5"
reqwest = { version = "0.12", default-features=false, features = [
    "rustls-tls",
    "gzip",
    "stream"
] }
section = { path = "../../" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
stub = { path = "../stub/" }
